Change data storage of reaction roles and other improvements